# feedlight

./: CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  release.yml
docs/: ARCHITECTURE.md
src/: index.css  main.tsx  routeTree.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  003_read_progress.sql  004_highlights.sql  005_takeaways.sql  006_tags.sql
src-tauri/src/: crawler.rs  lib.rs  macos.rs  main.rs
src-tauri/src/commands/: credentials.rs  export.rs  extract.rs  feed.rs  mod.rs  ollama.rs  tts.rs  video.rs
src/components/: AddFeedForm.tsx  AnalyticsDashboard.tsx  AppShell.tsx  ArticlePane.test.tsx  ArticlePane.tsx  DiscoverView.tsx  FeedItemCard.tsx  HighlightsView.tsx  OpmlControls.tsx  ReadUrlModal.tsx  SavedView.tsx  ShortcutsModal.tsx  SidebarContent.tsx  SidebarNav.tsx  Timeline.tsx  TimelineList.tsx
src/lib/: crawler.ts  date-range.ts  db.ts  highlight-anchor.ts  opml.ts  settings.ts  theme.ts
src/lib/hooks/: use-feed-refresh.ts  use-keyboard-shortcuts.ts
src/pages/: HomePage.tsx  RootLayout.tsx  SettingsPage.tsx
src/types/: database.ts
website/: astro.config.mjs  package.json  tailwind.config.mjs
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  index.astro
website/src/styles/: global.css
