[package]
name = "feedlight"
version = "0.2.0"
description = "Feedlight — because focus matters."
authors = ["Nishan Shetty"]
edition = "2021"

[lib]
name = "feedlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"] }
feed-rs = "2"
scraper = "0.23"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
security-framework = "3"

# macOS-only: capture uncaught AppKit/Cocoa exceptions (e.g. the wake-from-sleep
# -[NSWindow setStyleMask:] crash) and harden window handling.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3", features = ["NSException", "NSString"] }
